--- a/templates/home_page/about.html.twig
+++ b/templates/home_page/about.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Sobre Nós
+{% trans_default_domain 'messages' %}
+
+{% block title %}
+	{{ 'about_us_title'|trans }}
 {% endblock %}
 
 {% block body %}
@@ -9,24 +12,18 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="d-inline-flex p-3">
-						<a href="{{path('app_home_page')}}">
-							<button type="button" class="btn btn-dark">Voltar a loja</button>
+						<a href="{{ path('app_home_page') }}">
+							<button type="button" class="btn btn-dark">{{ 'back_to_store'|trans }}</button>
 						</a>
 					</div>
-                    <br>
-					<h1>Sobre Nós</h1>
-					<p>
-						Somos uma organização sediada em Paris, França, criada pela diáspora cabo-verdiana com o objetivo de fortalecer a conexão entre a comunidade cabo-verdiana no exterior e os comerciantes locais em Cabo Verde. Nosso site e-commerce foi projetado para facilitar o comércio direto entre os membros da diáspora e os vendedores locais, promovendo uma experiência única de compras para nossos clientes.
-					</p>
-					<p>
-						Focamos principalmente no setor alimentar, permitindo que a diáspora cabo-verdiana compre produtos diretamente de comerciantes locais em Cabo Verde. Nosso sistema possibilita que os clientes façam compras e instruam seus familiares ou destinatários a irem buscar os produtos nos pontos de venda, ou optem por uma entrega ao domicílio, garantindo maior conveniência e flexibilidade.
-					</p>
-					<p>
-						O nosso compromisso é com a qualidade, a autenticidade e o apoio à economia local, promovendo o crescimento e desenvolvimento do comércio em Cabo Verde através de uma plataforma digital inovadora e acessível.
-					</p>
+					<br>
+					<h1>{{ 'about_us_title'|trans }}</h1>
+					<p>{{ 'about_us_paragraph_1'|trans }}</p>
+					<p>{{ 'about_us_paragraph_2'|trans }}</p>
+					<p>{{ 'about_us_paragraph_3'|trans }}</p>
 				</div>
 				<div class="col-md-6">
-					<img src="{{ asset('image/backg/sobre.png') }}" alt="Imagem Sobre Nós" class="img-fluid">
+					<img src="{{ asset('image/backg/about.jpg') }}" alt="{{ 'about_us_title'|trans }}" class="img-fluid">
 				</div>
 			</div>
 		</section>
