--- a/templates/layout/city_menu.html.twig
+++ b/templates/layout/city_menu.html.twig
@@ -3,22 +3,20 @@
 
 <!-- Barre de navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<div
-		class="container-fluid">
+	<div class="container-fluid">
 		{# <a class="navbar-brand" href="#">Ma Boutique</a> #}
 
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="{{ 'navbar.toggle_navigation'|trans }}">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul
-				class="navbar-nav me-auto mb-2 mb-lg-0">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
 				<!-- Dropdown des villes -->
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="citiesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-						Cidades : lojas
+						{{ 'navbar.cities'|trans }}
 					</a>
 
 					<ul class="dropdown-menu" aria-labelledby="citiesDropdown">
