--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,34 +1,31 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Redefinir sua senha
-{% endblock %}
+{% trans_default_domain 'messages' %}
+
+{% block title %}{{ 'reset_password.title'|trans }}{% endblock %}
 
 {% block body %}
 	<div class="container mt-5">
 		{% for flash_error in app.flashes('reset_password_error') %}
 			<div class="alert alert-danger text-center mx-auto" style="max-width: 400px;" role="alert">
-				{{ flash_error }}
+				{{ flash_error|trans }}
 			</div>
 		{% endfor %}
 
-
-		<h1 class="mb-4 text-center">Redefinir sua senha</h1>
+		<h1 class="mb-4 text-center">{{ 'reset_password.heading'|trans }}</h1>
 
 		<div class="row justify-content-center">
 			<div class="col-md-6 col-sm-12">
 				{{ form_start(requestForm) }}
 				<div class="mb-3">
-					{{ form_label(requestForm.email, null, { 'label_attr': {'class': 'form-label'} }) }}
+					{{ form_label(requestForm.email, 'reset_password.email.label'|trans, { 'label_attr': {'class': 'form-label'} }) }}
 					{{ form_widget(requestForm.email, { 'attr': {'class': 'form-control'} }) }}
 					<small class="form-text text-muted">
-						Digite seu endereço de e-mail e enviaremos um
-						        link para redefinir sua senha.
+						{{ 'reset_password.email.help'|trans }}
 					</small>
 				</div>
 
-
-				<button class="btn btn-primary w-100">Enviar e-mail
-				</button>
+				<button class="btn btn-primary w-100">{{ 'reset_password.submit'|trans }}</button>
 				{{ form_end(requestForm) }}
 			</div>
 		</div>
