--- a/templates/user/_delete_form.html.twig
+++ b/templates/user/_delete_form.html.twig
@@ -1,5 +1,6 @@
-<form method="post" action="{{ path('app_user_delete', {'id': user.id}) }}"
- onsubmit="return confirm('Atenção: este processo não tem volta! Tem certeza de que deseja eliminar a sua conta?');">
+<form method="post"
+      action="{{ path('app_user_delete', {'id': user.id}) }}"
+      onsubmit="return confirm('{{ 'profile.delete_confirm'|trans }}');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-    <button class="btn">eliminar a Compta</button>
+    <button class="btn">{{ 'profile.delete_button'|trans }}</button>
 </form>
